apps/invoiceninja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoiceninja
  namespace: invoiceninja
spec:
  selector:
    app: invoiceninja
  ports:
    - name: http
      port: 80
      targetPort: http
